<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DetailsCharacterFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_characterDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgView_fragmetnDetailsCharacter_characterImage"
        android:layout_width="@dimen/default_icon_size_character"
        android:layout_height="@dimen/default_icon_size_character"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_characterDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/text_characterDetails_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@+id/imgView_fragmetnDetailsCharacter_characterImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="NAME CHARACTER"
        />

    <TextView
        android:id="@+id/label_characterDetails_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/specie_label"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_characterDetails_name"
        />

    <TextView
        android:id="@+id/text_characterDetails_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xl"
        app:layout_constraintTop_toTopOf="@id/label_characterDetails_species"
        app:layout_constraintBottom_toBottomOf="@id/label_characterDetails_species"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Human"
        />

    <TextView
        android:id="@+id/label_characterDetails_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/status_label"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_characterDetails_species"
        />

    <TextView
        android:id="@+id/text_characterDetails_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xl"
        app:layout_constraintTop_toTopOf="@id/label_characterDetails_status"
        app:layout_constraintBottom_toBottomOf="@id/label_characterDetails_status"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Alive"
        />

    <TextView
        android:id="@+id/label_characterDetails_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/gender_label"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_characterDetails_status"
        />

    <TextView
        android:id="@+id/text_characterDetails_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xl"
        app:layout_constraintTop_toTopOf="@id/label_characterDetails_gender"
        app:layout_constraintBottom_toBottomOf="@id/label_characterDetails_gender"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Male"
        />

    <TextView
        android:id="@+id/label_characterDetails_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/origin_label"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_characterDetails_gender"
        />

    <TextView
        android:id="@+id/text_characterDetails_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xl"
        app:layout_constraintTop_toTopOf="@id/label_characterDetails_origin"
        app:layout_constraintBottom_toBottomOf="@id/label_characterDetails_origin"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Guatemala"
        />

    <TextView
        android:id="@+id/label_characterDetails_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/episodes_label"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_characterDetails_origin"
        />

    <TextView
        android:id="@+id/text_characterDetails_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xl"
        app:layout_constraintTop_toTopOf="@id/label_characterDetails_episodes"
        app:layout_constraintBottom_toBottomOf="@id/label_characterDetails_episodes"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10"
        />


</androidx.constraintlayout.widget.ConstraintLayout>